  EntityRepository.define(EntityDefinition) added, rest deprecated
  EntityRepository.define(EntityDefinition) renamed to add
  EntityRepository.define() removed, wohooo
  Entity.isValueNull() needs to handle Entity.Key values as well for Type.ENTITY
  Property fields privatized, getters added
  Property.selectOnly field renamed to readOnly
  ForeignKeyProperty now uses an unmodifiable list for reference properties
  EntityDbConnection.getResultPacker(Type) is now non static and caches the packers
  EntityComboBoxModelTest and PropertyComboBoxModelTest added, rather rudimentary, to say the least
  Unit tests relying on a database connection now use a centrally initialized EntityDbProvider in EntityDbConnectionTest
  EntityDbRemoteServer.connectionTimeout field now represents seconds instead of milliseconds
  EntityTestUnit EntityDbProvider field replaced with a EntityDb field
  EntityDefinition, fixed bug preventing DenormalizedProperty from working
  Entity.hasDenormalizedProperties field removed
  State.StateGroup, now all other states are deactivated if an active state is added to the group, added a synchronized block in the add method
  Configuration.PERFORM_NULL_VALIDATION added
  EntityModel.validateData() renamed to validateEntities
  EntityModel.validateEntities() performs null validation if Configuration.PERFORM_NULL_VALIDATION is true
  EntityDefinition refactored, all Collection fields made unmodifiable
  Cryptic ret return parameter name replaced throughout
  EntityEditModel validation refactored, isValid() is now final, validate(property,value) throws ValidationException added
  EntityModel.validateEntities() now calls EntityEditModel.validate
  TextPropertyLink now uses the improved validation mechanism in EntityEditModel and adds the validation message to the component tooltip
  TextPropertyLink and FormattedTextPropertyLink refactored a bit, added toolTip functionality to the formatted one
  AbstractEntityPropertyLink.getValidationMessage() added